Ajustes no CRUD de mesas, na geração do qrcode, e em alguns estilos.

--- a/qPedido/WebContent/resources/css/estilo.css
+++ b/qPedido/WebContent/resources/css/estilo.css
@@ -11,7 +11,9 @@ form span.p_like input,form span.p_like select,form span.p_like img,form span.p_
 	float: left;
 }
 
-
+.espacado{
+	margin-bottom: 10px;
+}
 
 form p,form span.p_like,form div.p_like {
 	clear: both;
@@ -140,13 +142,80 @@ ul.ui-menu-child {
 	text-align: left !important;
 	font-family: Arial;
 	width: 100%;
-	font-size: 18px;
+	font-size: 28px;
 	color: white;
+	 background: -webkit-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%);
+	background: -o-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%); 
+	background: -moz-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%);
+	background: linear-gradient(to left, #4f7199 1%, #aacae2 47%, #607a99 100%); 
+}
+
+.tituloExpirada {
+	font-weight: bold;
+	text-align: left !important;
+	font-family: "Lobster-Regular";
+	width: 100%;
+	font-size: 28px;
+	color: #cd0a0a;
+	/* background: -webkit-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%);
+	background: -o-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%); 
+	background: -moz-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%);
+	background: linear-gradient(to left, #4f7199 1%, #aacae2 47%, #607a99 100%); */
+}
+
+.cabecalhoMenu {
+	text-align: left !important;
+	font-family: "Lobster-Regular" !important;
+	width: 100%;
+	font-size: 15px !important;
+	color: black !important; 
+}
+
+
+
+.cabecalhoMenuBotao {
+	text-align: left !important;
+	font-family: "Lobster-Regular" !important;
+	width: 100%;
+	font-size: 15px !important;
+	color: black !important; 
+	background: transparent !important;
+	border : none !important;
+}
+
+.cabecalhoMenuBotao:hover {
 	background: -webkit-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%);
 	background: -o-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%); 
 	background: -moz-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%);
-	background: linear-gradient(to left, #4f7199 1%, #aacae2 47%, #607a99 100%);
+	background:  linear-gradient(to left, #4f7199 1%, #aacae2 47%, #607a99 100%) !important;
 }
+
+
+
+
+
+
+ul li.ui-menuitem-active>a{
+   
+   background: -webkit-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%);
+	background: -o-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%); 
+	background: -moz-linear-gradient(left, #4f7199 1%, #aacae2 47%, #607a99 100%);
+    background: linear-gradient(to left, #4f7199 1%, #aacae2 47%, #607a99 100%) !important;    
+}
+
+
+
+
+
+@font-face{
+	font-family: "Lobster-Regular";
+    src: url("Lobster-Regular.ttf") format("truetype");
+}
+
+.Lobster-Regular-font{
+	font-family: "Lobster-Regular";
+}
+
 
 .subtitulo {
 	font-size: 16px !important;
@@ -219,6 +288,8 @@ a:active { /* ConfiguraÃ§Ãµes dos textos do item clicado (ativo) */
 	font-weight: bold;
 }
 
+
+
 #menu {
 	
 }
@@ -226,6 +297,7 @@ a:active { /* ConfiguraÃ§Ãµes dos textos do item clicado (ativo) */
 #menu li {
 	
 }
+
 
 #menu li ul { /* Cor de fundo do menu de nivel 2 (vertical) */
 	background-color: #363233;
