--- a/qPedido/.settings/org.eclipse.wst.common.component
+++ b/qPedido/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,6 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/qPedido/build/classes"/>
-        <property name="context-root" value="bringme"/>
+        <property name="context-root" value="meSirva"/>
     </wb-module>
 </project-modules>
