--- a/qPedido/WebContent/resources/css/estilo.css
+++ b/qPedido/WebContent/resources/css/estilo.css
@@ -15,6 +15,36 @@ form span.p_like input,form span.p_like select,form span.p_like img,form span.p_
 	margin-bottom: 10px;
 }
 
+.msgComFundoVermelho {
+	background-color: #d9534f;
+	font-weight: bold;
+	color: #fff;
+	display: inline;
+	padding: .2em .6em .3em;
+	font-size: 75%;
+	font-weight: 700;
+	line-height: 1;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	border-radius: .25em;
+}
+
+.msgComFundoVerde {
+	background-color: #5cb85c;
+	font-weight: bold;
+	color: #fff;
+	display: inline;
+	padding: .2em .6em .3em;
+	font-size: 75%;
+	font-weight: 700;
+	line-height: 1;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: baseline;
+	border-radius: .25em;
+}
+
 
 .dlgExclusao .ui-widget-header .ui-dialog{
 	background: linear-gradient(to left, #4f00ff 1%, #aacae2 47%, #607aff 100%);
